[gd_scene load_steps=8 format=2]

[ext_resource path="res://Terrain/HooligansTerrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Seal/SealSpawn.gd" type="Script" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://Seal/EnemySeal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://IceProjectile/IceProjectile.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1, 0.525901, 34.3053 )

[node name="Level" type="Spatial"]
script = ExtResource( 4 )
seal_scene = ExtResource( 5 )
ice_scene = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, -1.49012e-08, 0, 1, 2.98023e-08, 1.49012e-08, 0, 1, -34.4492, 24.809, -4.88107 )
move_speed = 6
max_throw_boost = 20

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.920498, -0.24986, 0.300426, 0, 0.768843, 0.639437, -0.39075, 0.5886, -0.707718, 20.0326, 55.4947, -61.3384 )
far = 121.8

[node name="SealSpawn" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 52.0666, 16.4287, 0.763008 )
monitoring = false
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="SealSpawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.03947, -13.4854, -5.71107 )
shape = SubResource( 6 )

[node name="SealTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SealExit" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -38.549, 0, -3.12557 )

[node name="HooligansTerrain" parent="." instance=ExtResource( 1 )]

[connection signal="ice_thrown" from="Player" to="." method="_on_Player_ice_thrown"]
[connection signal="timeout" from="SealTimer" to="." method="_on_SealTimer_timeout"]
